# investment_mcp

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  README_DASHBOARD.md  package-lock.json  pyproject.toml  requirements.txt  requirements_unified.txt  run_demo_analysis.py  simple_chat_test.py  start_system_controller.py  test_analysis_simple.py  test_constrained_portfolio.py  test_llm_chat.py  test_mcp_with_ai.py  test_ollama_simple.py  test_system_final.py
backend/: database.py  models.py
backend/ai/: __init__.py  config.py
backend/ai/analyzers/: __init__.py  constrained_portfolio_analyzer.py  economic_analyzer.py  historical_portfolio_analyzer.py  market_analyzer.py  portfolio_analyzer.py
backend/ai/providers/: __init__.py  base_provider.py  claude_provider.py  ollama_provider.py  openai_provider.py
backend/analysis/: correlations.py  patterns.py  risk_metrics.py
backend/data_collectors/: historical_fund_collector.py  riksbanken.py  scb.py  stock_market.py  swedish_economic_collector.py
backend/mcp_agents/: analysis_agent.py  data_agent.py
backend/models/: __init__.py
backend/system_controller/: main.py
config/: fund_universe.py  settings.py
docs/: phase2_setup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  ErrorCard.tsx  Layout.tsx  LoadingCard.tsx
frontend/src/config/: queryClient.ts
frontend/src/pages/: APITester.tsx  Dashboard.tsx  FundExplorer.tsx  MarketData.tsx  PortfolioAnalysis.tsx  SystemControl.tsx
frontend/src/services/: api.ts  mockApi.ts  queryClient.ts  systemApi.ts
frontend/src/types/: api.ts
frontend/src/utils/: systemController.py
investment_mcp_api/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
investment_mcp_api/api/common/: config.py  exceptions.py
investment_mcp_api/api/middleware/: auth.py  logging.py  rate_limit.py
investment_mcp_api/api/models/: requests.py  responses.py
investment_mcp_api/api/services/portfolio/: analysis_service.py
investment_mcp_api/api/v1/routers/: __init__.py  portfolio.py
investment_mcp_api/docs/examples/: portfolio_analysis_examples.py
investment_mcp_api/docs/guides/: getting_started.md
investment_mcp_api/docs/openapi/: investment_mcp_api.yaml
mcp_servers/investment_server/: README.md  package.json  server.py  tools.py
mcp_servers/investment_server/src/: index.ts
scripts/: cleanup_old_files.py  commit_phase2.sh  daily_data_update.py  demo_mcp_tools.py  monitor_data_collection.py  run_system_test.py  setup_cron.sh  show_data.py  start_mcp_server.py  test_integration.py  verify_phase2.py
src/: __init__.py
src/ai/: __init__.py  ai_engine.py  gemma_provider.py  prompt_templates.py  response_parser.py
src/analysis/: __init__.py  portfolio.py  risk.py  technical.py
src/collectors/: __init__.py  base.py  market_data.py  swedish_data.py
src/core/: __init__.py  config.py  database.py
src/core/analysis/: __init__.py  fundamental_analysis.py  market_regime.py  risk_metrics.py  technical_analysis.py
src/core/config/: settings.py
src/core/data_collection/: riksbank_collector.py  yfinance_collector.py
src/core/optimization/: backtesting.py  constraints.py  housing_analysis.py  markowitz.py  min_volatility.py  monte_carlo.py  portfolio_engine.py  risk_parity.py  sharpe_optimizer.py
src/mcp_tools/: __init__.py  enhanced_server.py  server.py  tools.py
src/models/: fund.py  portfolio.py
src/utils/: __init__.py  data_quality.py  exceptions.py  helpers.py  logging.py
tests/: test_integration.py  test_phase1.py  test_phase2.py
utils/: logging_config.py  rate_limiter.py
